Added statusInd to emails
